--- a/src/app/order/components/order-creation/order-creation.component.html
+++ b/src/app/order/components/order-creation/order-creation.component.html
@@ -18,33 +18,42 @@
             </div>
             <a mat-button mat-flat-button color="accent" (click)="createDialog()">Ajouter du matériel</a>
         </div>
-        <table class="table-auto md:table-fixed">
-            <thead class="text-left">
-            <tr>
-                <th class="p-3">Type</th>
-                <th class="p-3">Référence</th>
-                <th class="p-3">Numéro de série</th>
-                <th class="p-3">Actions</th>
-            </tr>
-            </thead>
-            <tbody *ngIf="order.items" class="text-left">
-            <tr *ngFor="let item of order.items" class="w-full">
-                <td class="p-3">{{item.type.name}}</td>
-                <td class="p-3">{{item.reference}}</td>
-                <td class="p-3">{{item.serial_number}}</td>
-                <td class="p-3">
-                    <button class="mr-2" (click)="updateDialog(item)" mat-button mat-flat-button color="accent">Modifier</button>
-                    <button (click)="removeItem(item)" mat-button mat-flat-button color="warn">Supprimer</button>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+        <mat-expansion-panel hideToggle *ngFor="let type of order.types" [expanded]="true">
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+                {{type.name}}
+              </mat-panel-title>
+            </mat-expansion-panel-header>
+            <table class="table-fixed sm:table-fixed">
+                <thead class="text-left">
+                <tr class="rounded-l-lg sm:rounded-none mb-0 sm:mb-2 hidden sm:table-row">
+                    <th class="p-3 text-left">Fournisseur</th>
+                    <th class="p-3 text-left">Description</th>
+                    <th class="p-3 text-left">Quantité</th>
+                    <th class="p-3 text-left">Prix</th>
+                    <th class="p-3 text-left">Actions</th>
+                </tr>
+                </thead>
+                <tbody *ngIf="type" class="text-left flex-1 sm:flex-none">
+                    <tr *ngFor="let item of type.items;  let i = index" [attr.data-index]="i" class="flex flex-col flex-no-wrap sm:table-row rounded-l-lg sm:rounded-none mb-0 sm:mb-2 last:border-none">
+                        <td class="p-3 text-left">{{item.provider}}</td>
+                        <td class="p-3 text-left">{{item.description}}</td>
+                        <td class="p-3 text-left">{{item.quantity}}</td>
+                        <td class="p-3 text-left">{{item.price.toFixed(2)}}</td>
+                        <td class="p-3 text-left border-bottom-accent sm:border-none">
+                            <button mat-button mat-flat-button color="accent" class="mr-4" (click)="updateDialog(type, i)">Modifier</button>
+                            <button mat-button mat-flat-button color="warn" (click)="removeItem(type, i)">Supprimer</button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>          
+        </mat-expansion-panel>
         <div class="py-4">
             <hr class="">
         </div>
         <div class="flex flex-row-reverse justify-between">
             <div class="flex flex-row-reverse mb-6">
-                <button [disabled]="!(order.items.length>0) || !form.valid" (click)="post()" mat-button mat-flat-button color="primary">Valider</button>
+                <button [disabled]="!(order.types.length>0) || !form.valid" (click)="post()" mat-button mat-flat-button color="primary">Valider</button>
             </div>
         </div>
     </form>
