--- a/src/app/order/components/order-details/order-details.component.html
+++ b/src/app/order/components/order-details/order-details.component.html
@@ -2,7 +2,7 @@
     <div class="font-bold text-2xl pb-10 flex flex-row justify-between">
         <h2>Commande: </h2>
         <a *ngIf="order.isReceived" class="w-24 h-6 flex text-center content-center align-middle items-center justify-center bg-green-100 text-green-800 text-xs font-medium mr-2 px-2.5 py-0.5 rounded-full dark:bg-green-900 dark:text-green-300">Reçue</a>
-        <a *ngIf="!order.isReceived" mat-button mat-flat-button color="accent" (click)="put()">Réceptionner</a>
+        <a *ngIf="!order.isReceived" [disabled]="!isComplete()" mat-button mat-flat-button color="accent" (click)="receive()">Réceptionner</a>
     </div>
     <form>
         <div class="grid gap-6 mb-6 md:grid-cols-2">
@@ -14,6 +14,10 @@
                 <label for="user" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Utilisateur</label>
                 <input disabled value="{{order.user?.username}} ({{order.user?.firstname}} {{order.user?.lastname}})" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"/>
             </div>
+            <div>
+                <label for="price" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Prix</label>
+                <input disabled value="{{getTotalPrice().toFixed(2)}} €" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"/>
+            </div>
         </div>
         <div class="py-4 ">
             <hr class="bg-black">
@@ -23,28 +27,37 @@
                 <h2>Matériel:</h2>
             </div>
         </div>
-        <mat-expansion-panel hideToggle *ngFor="let type of order.types">
+        <mat-expansion-panel hideToggle *ngFor="let type of order.types" [expanded]="true">
             <mat-expansion-panel-header>
               <mat-panel-title>
                 {{type.type.name}}
               </mat-panel-title>
               <mat-panel-description>
-                Quantité: {{type.quantity}}
+                Quantité: {{type.quantity}} 
+              </mat-panel-description>
+              <mat-panel-description>
+                Prix: {{type.price}} 
               </mat-panel-description>
             </mat-expansion-panel-header>
-            <table class="table-auto md:table-fixed">
+            <table class="table-fixed sm:table-fixed">
                 <thead class="text-left">
-                <tr class="flex flex-col flex-no-wrap sm:table-row rounded-l-lg sm:rounded-none mb-0 sm:mb-2">
+                <tr class="rounded-l-lg sm:rounded-none mb-0 sm:mb-2 hidden sm:table-row">
                     <th class="p-3 text-left">Référence</th>
                     <th class="p-3 text-left">Numéro de série</th>
                     <th class="p-3 text-left">Description</th>
+                    <th class="p-3 text-left">Prix</th>
+                    <th *ngIf="!is_locked" class="p-3 text-left">Actions</th>
                 </tr>
                 </thead>
                 <tbody *ngIf="type" class="text-left flex-1 sm:flex-none">
-                    <tr *ngFor="let item of type.items" class="flex flex-col flex-no-wrap sm:table-row rounded-l-lg sm:rounded-none mb-0 sm:mb-2">
+                    <tr *ngFor="let item of type.items;  let i = index" [attr.data-index]="i" class="flex flex-col flex-no-wrap sm:table-row rounded-l-lg sm:rounded-none mb-0 sm:mb-2 last:border-none">
                         <td class="p-3 text-left">{{item.reference}}</td>
-                        <td class="p-3 text-left">{{item.serial_number}}</td>
+                        <td class="p-3 text-left">{{item.serialNumber}}</td>
                         <td class="p-3 text-left">{{item.description}}</td>
+                        <td [ngClass]="is_locked ? 'text-left border-bottom-accent sm:border-none' :''" class="p-3 text-left">{{item.price.toFixed(2)}}</td>
+                        <td *ngIf="!is_locked" class="p-3 text-left border-bottom-accent sm:border-none">
+                            <button mat-button mat-flat-button color="accent" class="mr-4" (click)="updateDialog(type, i)">Modifier</button>
+                        </td>
                     </tr>
                 </tbody>
             </table>          
@@ -52,12 +65,16 @@
         <div class="py-4">
             <hr class="">
         </div>
-        <!--
-        <div class="flex flex-row-reverse justify-between">
-            <div class="flex flex-row-reverse mb-6">
-                <button [disabled]="is_locked" (click)="put()" mat-button mat-flat-button color="primary">Modifier</button>
+        <div *ngIf="!order.isReceived" class="flex flex-row-reverse justify-between">
+            <div *ngIf="!is_locked" class="flex flex-row-reverse mb-6">
+                <button (click)="put()" mat-button mat-flat-button color="primary">Valider</button>
+            </div>
+            <div *ngIf="is_locked && auth.hasAuthority('TEC')" class="flex flex-row-reverse mb-6">
+                <a (click)="toggleLock()" mat-button mat-flat-button color="accent">Modifier</a>
+            </div>
+            <div *ngIf="!is_locked" class="flex flex-row-reverse mb-6">
+                <a (click)="toggleLock()" mat-button mat-flat-button color="warn">Annuler</a>
             </div>
         </div>
-        -->
     </form>
 </div>
