--- a/src/app/user/components/user-details/user-details.component.html
+++ b/src/app/user/components/user-details/user-details.component.html
@@ -44,7 +44,7 @@
             <div class="font-bold text-xl pb-4 ">
                 <h2>Roles:</h2>
             </div>
-            <div *ngIf="!is_locked" class="flex flex-row items-center justify-center align-middle col-span-3">
+            <div *ngIf="!is_locked" class="flex flex-row items-center justify-center align-middle col-span-4">
                 <div class="mr-4 h-10 w-full">
                     <input type="text" matInput [formControl]="searchRoleSelect"
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
@@ -69,7 +69,7 @@
             <tbody *ngIf="user.roles" class="text-left">
                 <tr *ngFor="let role of user.roles">
                     <td class="p-3">{{role.name}}</td>
-                    <td class="p-3">
+                    <td class="p-3 pr-0 flex flex-row justify-end">
                         <button *ngIf="!is_locked" mat-button mat-flat-button color="warn" (click)="removeRole(role)">Supprimer</button>
                     </td>
                 </tr>
